--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "buffer": "^5.1.0",
+    "cheerio": "^0.22.0",
+    "events": "^3.0.0",
+    "i": "^0.3.6",
+    "npm": "^6.1.0",
     "react": "16.3.1",
     "react-native": "0.55.3",
     "react-native-easy-toast": "^1.1.0",
     "react-native-splash-screen": "^3.0.7",
-    "react-navigation": "^1.5.8"
+    "react-navigation": "^1.5.8",
+    "stream": "0.0.2"
   },
   "devDependencies": {
     "babel-jest": "23.0.0-alpha.0",
